# KzMusic

./: .gitignore  README.md  google-services.json  gradle.properties  settings.gradle.kts
app/: .gitignore  build.gradle.kts  google-services.json
app/src/debug/: google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AdvancedAudioPlayer.cpp  CMakeLists.txt  native-lib.cpp
app/src/main/java/: KzmusicDatabase.java
app/src/main/res/anim/: scroll_horizontal.xml
app/src/main/res/drawable/: card_background.xml  ic_360audio.xml  ic_account2.xml  ic_add.xml  ic_add_song.xml  ic_added.xml  ic_album_photo.xml  ic_artist.xml  ic_bar_chart.xml  ic_bin.xml  ic_clear.xml  ic_colon.xml  ic_delete.xml  ic_down.xml  ic_equalizer.xml  ic_fast_forward.xml  ic_foward.xml  ic_liked.xml  ic_liked_off.xml  ic_loop.xml  ic_loop_on.xml  ic_menu.xml  ic_more_2.xml  ic_music_video.xml  ic_play.xml  ic_rewind.xml  ic_settings.xml  ic_shuffle.xml  ic_shuffle_on.xml  ic_up.xml  ic_virtual.xml  library.xml  outline_browse_24.xml  outline_electric_bolt_24.xml  rounded_background.xml
app/src/main/res/layout/: activity_get_started.xml  activity_homepage.xml  activity_main.xml  activity_main_page.xml  activity_new_account.xml  activity_sign_in.xml  activity_spotify_auth_page.xml  activity_spotify_auth_page2.xml  fragment_account_settings.xml  fragment_artist.xml  fragment_edit_playlist.xml  fragment_gen_a_i.xml  fragment_home.xml  fragment_library.xml  fragment_liked_songs.xml  fragment_media_overlay.xml  fragment_playlist_creation.xml  fragment_playlist_overlay.xml  fragment_radio.xml  fragment_search.xml  fragment_spotify_overlay.xml  fragment_top10_songs.xml  fragment_user_mix.xml  fragment_user_music.xml  item_music.xml  item_playlist.xml  item_song.xml  item_song2.xml  item_song3.xml  notification_bar.xml  (+1 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+82 files in other folders)
